Changes for 3.4.8rc1

New features:
A.F....... [ZBX-1357] enabled Hebrew translation to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), French, German, Hebrew, Japanese, Korean, Russian, Turkish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-13434] fixed incorrect trigger dependencies being set after copying triggers to multiple hosts; thanks to Kotaro Miyashita for the patch (Ivo)
..F....... [ZBX-12883] fixed incorrect ordering the list of triggers after saving a map (agriscenko)
..F....... [ZBX-12940] fixed content does not fit dialog window (agriscenko)
..F....... [ZBX-13401] fixed successful items mass update with invalid update interval (agriscenko)
..F....... [ZBX-13342] fixed order by query in frontend Maintenance tab (agriscenko)
A......... [ZBX-6167] fixed partial updating in maintenance.update (ashubin)
...G...... [ZBX-13062] banned using of mutex in threads of metrics collection (MVekslers)
........S. [ZBX-13236] fixed error message of function parameters parse (MVekslers)
....I..... [ZBX-13398] fixed configure script for Debian GNU/Linux "buster" and "sid" to work with PostgreSQL (viktors)
..F....... [ZBX-13428] fixed long name of map outside go back button in map widget (agriscenko, Sasha)
A.F....... [ZBX-12754] fixed undefined index error in map import (gcalenko)
..F....... [ZBX-13166] fixed daily and yearly notification reports not including current day/last day of leap-year (nikita)
.......PS. [ZBX-13498] added optional MySQL upgrade patch for "problem" table to drop redundant index after another index that can be used to enforce the foreign key constraint has been created (vso)
........S. [ZBX-13452] fixed Elasticsearch history storage default value types (viktors)
..F....... [ZBX-12941] fixed checkbox overlay's position over the checkbox (miks)
..F....... [ZBX-13334] fixed translations of Widget parameters window (agriscenko)